--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,3 +69,56 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.3"
+
+    //dependency for barcode scanner
+    implementation 'com.google.mlkit:barcode-scanning:17.0.3'
+
+    implementation 'com.google.android.gms:play-services-mlkit-barcode-scanning:18.1.0'
+
+    // CameraX core library using the camera2 implementation
+//    val camerax_version = "1.3.0-alpha02"
+    // The following line is optional, as the core library is included indirectly by camera-camera2
+    implementation"androidx.camera:camera-core:1.3.0-alpha02"
+    implementation "androidx.camera:camera-camera2:1.3.0-alpha02"
+    // If you want to additionally use the CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:1.3.0-alpha02"
+    // If you want to additionally use the CameraX VideoCapture library
+    implementation("androidx.camera:camera-video:1.3.0-alpha02")
+    // If you want to additionally use the CameraX View class
+    implementation"androidx.camera:camera-view:1.3.0-alpha02"
+    // If you want to additionally add CameraX ML Kit Vision Integration
+    implementation"androidx.camera:camera-mlkit-vision:1.3.0-alpha02"
+    // If you want to additionally use the CameraX Extensions library
+    implementation "androidx.camera:camera-extensions:1.3.0-alpha02"
+
+   // implementation "androidx.room:room-coroutines:2.1.0-alpha04"
+    implementation "androidx.room:room-ktx:2.5.0"
+    implementation "androidx.room:room-runtime:2.5.0"
+    implementation 'androidx.room:room-migration:2.5.0'
+    kapt "androidx.room:room-compiler:2.5.0"
+
+
+    //Dagger hilt
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt'com.google.dagger:hilt-android-compiler:2.44'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    //implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    kapt "org.jetbrains.kotlinx:kotlinx-metadata-jvm:0.4.2"
+    implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.mockito:mockito-core:4.4.0'
+    testImplementation "io.mockk:mockk:1.10.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
+
+    testImplementation 'androidx.test:core-ktx:1.5.0'
