--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
 buildscript {
     ext {
-        compose_ui_versio
+        compose_ui_version = '1.2.1'
+    }
+
+    dependencies {
+        classp
