--- a/build.gradle
+++ b/build.gradle
@@ -4,4 +4,6 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43.1
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43.1'
+    }
+}// Top-level build file where you can add con
