--- a/build.gradle
+++ b/build.gradle
@@ -6,4 +6,6 @@ buildscript {
     dependencies {
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.43.1'
     }
-}// Top-level build file where you can add configuration options common to all sub-projects/
+}// Top-level build file where you can add configuration options common to all sub-projects/modules.
+plugins {
+    id 'com.android.applica
