--- a/build.gradle
+++ b/build.gradle
@@ -8,4 +8,5 @@ buildscript {
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.applica
+    id 'com.android.application' version '7.3.0' apply false
+    id 'com.android.l
