--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
-# Gradle se
+# Gradle settings configured through the IDE *will override*
+# any settings sp
