--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,7 @@
 pluginManagement {
     repositories {
-        gradlePlugi
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
